# NetLogAI

./: .gitignore  AI_INTEGRATION_SUMMARY.md  CLAUDE.md  CLI_INTEGRATION_SUMMARY.md  CREATE_REPOSITORIES.bat  DEPLOYMENT_GUIDE.md  DEVICE_INTEGRATION_SUMMARY.md  GITHUB_ORGANIZATION_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_API_INTEGRATION_SUMMARY.md  README.md  release-notes-v2.0.0.md  test_cli.bat  test_lua_parser.cpp
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  parser_request.md
docs/: netlog-parser-dsl.md
examples/parsers/: README.md  custom_syslog.nlp  palo_alto_firewall.nlp
examples/parsers/cisco/: asa-firewall.nlp  ios-general.nlp  nxos-general.nlp
examples/parsers/generic/: syslog-rfc3164.nlp
examples/tests/: lua_engine_tests.cpp  test_sample_logs.cpp
libnetlog/: .gitignore  CMakeLists.txt  README.md
libnetlog/.github/workflows/: ci.yml
libnetlog/include/libnetlog/: device_types.hpp  log_entry.hpp  lua_engine.hpp  parser_factory.hpp  severity.hpp
libnetlog/include/libnetlog/parsers/: base_parser.hpp  cisco_asa_parser.hpp  cisco_ios_parser.hpp  cisco_nxos_parser.hpp  generic_syslog_parser.hpp  lua_parser.hpp
libnetlog/include/libnetlog/utils/: regex_patterns.hpp  timestamp_parser.hpp
libnetlog/src/: device_types.cpp  log_entry.cpp  lua_engine.cpp  parser_factory.cpp  severity.cpp
libnetlog/src/parsers/: base_parser.cpp  cisco_asa_parser.cpp  cisco_ios_parser.cpp  cisco_nxos_parser.cpp  generic_syslog_parser.cpp  lua_parser.cpp
libnetlog/src/utils/: regex_patterns.cpp  timestamp_parser.cpp
netlogai-core/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-COMMERCIAL.txt  README.md  test_logs.txt  test_manifest.cpp
netlogai-core/.claude/: settings.local.json
netlogai-core/.github/workflows/: ci.yml
netlogai-core/examples/plugins/performance/: plugin.json
netlogai-core/examples/plugins/security/: plugin.json
netlogai-core/examples/plugins/topology/: plugin.json  topology_plugin.cpp  topology_plugin.hpp
netlogai-core/include/analytics/: git_style_commands.hpp
netlogai-core/include/networking/: telnet_client.hpp
netlogai-core/include/plugins/: plugin_interface.hpp  plugin_manager.hpp
netlogai-core/plugins/: README.md
netlogai-core/schemas/: plugin-manifest-schema.json
netlogai-core/scripts/: setup-dev-env.bat  update-submodules.bat
netlogai-core/src/: main.cpp
netlogai-core/src/analytics/: git_style_commands.cpp  pattern_analyzer.cpp  timeline_visualizer.cpp
netlogai-core/src/cli/: command_line.cpp  command_line.hpp
netlogai-core/src/commands/: ai_commands.cpp  ai_commands.hpp  config_commands.cpp  config_commands.hpp  device_commands.cpp  device_commands.hpp  log_commands.cpp  log_commands.hpp  parser_commands.cpp  parser_commands.hpp  plugin_commands.cpp  plugin_commands.hpp
netlogai-core/src/networking/: telnet_client.cpp
netlogai-core/src/plugins/: plugin_manager.cpp
netlogai-parsers/: .gitignore  README.md
netlogai-parsers/.github/workflows/: ci.yml
test-logs/: README.md  TESTING_GUIDE.md  run-tests.bat  test-config.json
